--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
 
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
+
     -->
+    <script src="./dataSeed.js"></script>
+
   </body>
 </html>
