--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
       To create a production bundle, use `npm run build`.
 
     -->
-    <script src="./dataSeed.js"></script>
+    <!-- <script src="./dataSeed.js"></script> -->
+    
 
   </body>
 </html>
